examples/test/testpolicy1279.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1279
  namespace: namespace48
spec:
  podSelector:
    matchLabels:
      key24: value4
      key2: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value39
          key10: value35
          key32: value49
      podSelector:
        matchLabels:
          key6: value45
          key1: value31
          key47: value25
